<resources>

    <string name="app_name">Personal-Finance-App</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation -->
    <string name="navigation_summary">Summary</string>
    <string name="navigation_income">Income</string>
    <string name="navigation_expenditure">Expenditure</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_text">Log In</string>
    <string name="signUp_text">Not registered? Click here!</string>
    <string name="loginActivity_text">LoginActivity</string>

    <!-- Spinner Income -->
    <string-array name="income_categories">
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <!-- Spinner Expenditure -->
    <string-array name="expenditure_categories">
        <item>Food</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Accommodation</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cv_title">Title</string>
    <string name="cv_category">Category</string>
    <string name="cv_date">Date</string>
    <string name="amount">cv_amount</string>

    <string name="transaction_hint_title">Title</string>
    <string name="transaction_hint_amount">Amount</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_btn_add">Add</string>
    <string name="transaction_btn_date">select date</string>

</resources>
