<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/grey_900"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_800">

        <ImageView
            android:id="@+id/cv_iv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_menu_date_range" />

        <TextView
            android:id="@+id/cv_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/cv_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/teal_300"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cv_tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_tv_title"
            android:layout_marginStart="80dp"
            android:text="@string/cv_category"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/amber_900" />

        <TextView
            android:id="@+id/cv_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_tv_category"
            android:layout_marginStart="80dp"
            android:text="@string/cv_date"
            android:textColor="@color/light_blue_400" />

        <TextView
            android:id="@+id/cv_tv_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/cv_tv_category"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>