<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context="com.example.benjo.personal_finance_app.activities.LoginActivity">

    <!-- android:background="@color/color_loginBackground" -->

    <TextView
        android:id="@+id/frag_login_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50sp"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Personal Finance App" />


    <EditText
        android:id="@+id/frag_login_et_name"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/frag_login_tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:background="@drawable/rounded_rectangle"
        android:drawableStart="@drawable/ic_person_login_20dp"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/frag_login_et_password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/frag_login_et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1sp"
        android:background="@drawable/rounded_rectangle"
        android:drawableStart="@drawable/ic_key_login_20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/frag_login_btn"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/frag_login_et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:background="@drawable/rounded_rectangle_login"
        android:text="@string/btn_text" />

    <TextView
        android:id="@+id/frag_login_et_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/signUp_text"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="14sp" />

</RelativeLayout>
